--- a/finish/istio.yaml
+++ b/finish/istio.yaml
@@ -60,9 +60,6 @@ spec:
         image: system:1.0-SNAPSHOT
         ports:
         - containerPort: 9080
-        envFrom:
-        - configMapRef:
-            name: service-config
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -84,3 +81,6 @@ spec:
         image: inventory:1.0-SNAPSHOT
         ports:
         - containerPort: 9080
+        envFrom:
+        - configMapRef:
+            name: inventory-config
