--- a/finish/istio.yaml
+++ b/finish/istio.yaml
@@ -35,7 +35,7 @@ metadata:
     app: inventory
 spec:
   ports:
-  - port: 9080
+  - port: 9081
     name: http
   selector:
     app: inventory
@@ -60,6 +60,9 @@ spec:
         image: system:1.0-SNAPSHOT
         ports:
         - containerPort: 9080
+#        envFrom:
+#        - configMapRef:
+#            name: service-config
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -80,7 +83,7 @@ spec:
       - name: inventory-container
         image: inventory:1.0-SNAPSHOT
         ports:
-        - containerPort: 9080
+        - containerPort: 9081
         envFrom:
         - configMapRef:
             name: inventory-config
