--- a/finish/traffic.yaml
+++ b/finish/traffic.yaml
@@ -13,10 +13,9 @@ spec:
         port:
           number: 9080
         host: system-service
-    # fault:
-    #   delay:
-    #     percent: 100
-    #     fixedDelay: 10s
+    retries:
+      attempts: 2
+      retryOn: 5xx
 ---
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
@@ -31,9 +30,8 @@ spec:
   - route:
     - destination:
         port:
-          number: 9080
+          number: 9081
         host: inventory-service
     retries:
       attempts: 4
       retryOn: 5xx
-    #timeout: 2s
