--- a/finish/system/pom.xml
+++ b/finish/system/pom.xml
@@ -106,8 +106,8 @@
                     <configFile>src/main/liberty/config/server.xml</configFile>
                     <include>usr</include>
                     <bootstrapProperties>
-                        <default.http.port>${http.port}</default.http.port>
-                        <default.https.port>${https.port}</default.https.port>
+                        <default.http.port>${system.http.port}</default.http.port>
+                        <default.https.port>${system.https.port}</default.https.port>
                     </bootstrapProperties>
                 </configuration>
                 <executions>
