--- a/start/inventory/pom.xml
+++ b/start/inventory/pom.xml
@@ -57,19 +57,24 @@
             <groupId>org.glassfish</groupId>
             <artifactId>javax.json</artifactId>
         </dependency>
-        <dependency>
-           <groupId>io.openliberty.features</groupId>
-            <!-- tag::mpFaultTolerance[] -->
-           <artifactId>mpFaultTolerance-2.0</artifactId>
-           <!-- end::mpFaultTolerance[] -->
-           <type>esa</type>
-           <scope>provided</scope>
-        </dependency>  
         <!-- Support for JDK 9 and above -->
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
+        </dependency>
+        
+        <dependency>
+           <groupId>io.openliberty.features</groupId>
+           <artifactId>mpFaultTolerance-2.0</artifactId>
+           <type>esa</type>
+           <scope>provided</scope>
         </dependency>        
+        <dependency>
+           <groupId>io.openliberty.features</groupId>
+           <artifactId>mpMetrics-2.0</artifactId>
+           <type>esa</type>
+           <scope>provided</scope>
+        </dependency>     
     </dependencies>
     
     <profiles>
@@ -122,8 +127,10 @@
                     <configFile>src/main/liberty/config/server.xml</configFile>
                     <include>usr</include>
                     <bootstrapProperties>
-                        <default.http.port>${http.port}</default.http.port>
-                        <default.https.port>${https.port}</default.https.port>
+                        <default.http.port>${inventory.http.port}</default.http.port>
+                        <default.https.port>${inventory.https.port}</default.https.port>
+                        <system.http.port>${system.http.port}</system.http.port>
+                        <system.https.port>${system.https.port}</system.https.port>
                     </bootstrapProperties>
                 </configuration>
                 <executions>
