--- a/finish/inventory/pom.xml
+++ b/finish/inventory/pom.xml
@@ -62,13 +62,14 @@
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
         </dependency>
-        
+        <!-- tag::mpFaultTolerance[] -->
         <dependency>
            <groupId>io.openliberty.features</groupId>
            <artifactId>mpFaultTolerance-2.0</artifactId>
            <type>esa</type>
            <scope>provided</scope>
-        </dependency>        
+        </dependency>
+        <!-- end::mpFaultTolerance[] -->        
         <dependency>
            <groupId>io.openliberty.features</groupId>
            <artifactId>mpMetrics-2.0</artifactId>
