--- a/start/istio.yaml
+++ b/start/istio.yaml
@@ -1,3 +1,4 @@
+# tag::gateway[]
 apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
@@ -13,6 +14,7 @@ spec:
     hosts:
     - "system.example.com"
     - "inventory.example.com"
+# end::gateway[]
 ---
 apiVersion: v1
 kind: Service
@@ -84,6 +86,10 @@ spec:
         image: inventory:1.0-SNAPSHOT
         ports:
         - containerPort: 9081
+        # tag::invConfig[]
         envFrom:
         - configMapRef:
+            # tag::configName2[]
             name: inventory-config
+            # end::configName2[]
+        # end::invConfig[]
