addressed dev content feedback

--- a/start/services.yaml
+++ b/start/services.yaml
@@ -81,3 +81,6 @@ spec:
         image: inventory:1.0-SNAPSHOT
         ports:
         - containerPort: 9081
+        envFrom:
+        - configMapRef:
+            name: inventory-config
