--- a/finish/inventory/pom.xml
+++ b/finish/inventory/pom.xml
@@ -7,7 +7,7 @@
 
     <parent>
         <groupId>io.openliberty.guides</groupId>
-        <artifactId>kube-demo</artifactId>
+        <artifactId>microprofile-istio-retry</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
