--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ before_script:
 - chmod +x minikube
 - sudo ln -s $(pwd)/minikube /usr/local/bin/minikube
 - sudo minikube start --vm-driver=none --bootstrapper=localkube
+- eval $(minikube docker-env)
 - chmod +x ../scripts/travisTest.sh
 script: ../scripts/travisTest.sh
 notifications:
@@ -32,4 +33,4 @@ notifications:
 branches:
   only:
   - master
-  - qa
+  - dev
