--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ before_script:
 - chmod +x minikube
 - sudo ln -s $(pwd)/minikube /usr/local/bin/minikube
 - sudo minikube start --vm-driver=none --bootstrapper=localkube
+- sudo apt install jq
 - chmod +x ../scripts/travisTest.sh
 script: ../scripts/travisTest.sh
 notifications:
