--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ before_script:
 - wget https://github.com/kubernetes/minikube/releases/download/v0.28.2/minikube-linux-amd64 -q -O minikube
 - chmod +x minikube
 - sudo ln -s $(pwd)/minikube /usr/local/bin/minikube
-- sudo apt install jq
 - sudo minikube start --vm-driver=none --bootstrapper=localkube
+- sudo apt-get install jq
 - chmod +x ../scripts/travisTest.sh
 script: ../scripts/travisTest.sh
 branches:
