--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_script:
 - sudo ln -s $(pwd)/minikube /usr/local/bin/minikube
 - sudo minikube start --vm-driver=none --bootstrapper=localkube
 - sudo apt-get install jq
-- sudo -s -H eval $(minikube docker-env)
+- sudo -s eval $(minikube docker-env)
 - chmod +x ../scripts/travisTest.sh
 script: ../scripts/travisTest.sh
 branches:
