fixed file hotspots

--- a/finish/services.yaml
+++ b/finish/services.yaml
@@ -90,6 +90,7 @@ spec:
             name: inventory-config
             # end::configName2[]
         # end::invConfig[]
+# tag::configHide[]
 ---
 # tag::configMap[]
 apiVersion: v1
@@ -103,3 +104,4 @@ data:
   MP_Fault_Tolerance_NonFallback_Enabled: "false"
   # end::nonFallback[]
 # end::configMap[]
+# end::configHide[]
