--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ before_script:
 - sudo ln -s $(pwd)/minikube /usr/local/bin/minikube
 - sudo minikube start --vm-driver=none --bootstrapper=localkube
 - sudo apt-get install jq
-- chmod +x ../scripts/travisTest.sh
-script: ../scripts/travisTest.sh
+- chmod +x scripts/travisTest.sh
+script: scripts/travisTest.sh
 branches:
   only:
   - master
