--- a/finish/traffic.yaml
+++ b/finish/traffic.yaml
@@ -29,6 +29,8 @@ spec:
         port:
           number: 9081
         host: inventory-service
+    # tag::istioRetry[]	
     retries:
       attempts: 4
       retryOn: 5xx
+    # end::istioRetry[]
