--- a/start/inventory/pom.xml
+++ b/start/inventory/pom.xml
@@ -5,12 +5,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>io.openliberty.guides</groupId>
-        <artifactId>microprofile-istio-retry-fallback</artifactId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
-
+    <groupId>io.openliberty.guides</groupId>
     <artifactId>inventory</artifactId>
     <packaging>war</packaging>
 
@@ -36,7 +31,7 @@
             <groupId>org.eclipse.microprofile</groupId>
             <artifactId>microprofile</artifactId>
             <version>3.2</version>
-            <type>pom</type>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
