--- a/start/system/pom.xml
+++ b/start/system/pom.xml
@@ -7,6 +7,7 @@
 
     <groupId>io.openliberty.guides</groupId>
     <artifactId>system</artifactId>
+    <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <properties>
@@ -29,6 +30,7 @@
             <groupId>org.eclipse.microprofile</groupId>
             <artifactId>microprofile</artifactId>
             <version>3.2</version>
+            <type>pom</type>
             <scope>provided</scope>
         </dependency>    
     </dependencies>
