--- a/finish/inventory/pom.xml
+++ b/finish/inventory/pom.xml
@@ -7,7 +7,9 @@
 
     <groupId>io.openliberty.guides</groupId>
     <artifactId>inventory</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <!-- tag::version[] -->
+    <version>2.0-SNAPSHOT</version>
+    <!-- end::version[] -->
     <packaging>war</packaging>
 
     <properties>
