--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,7 +41,7 @@ jobs:
     - name: Start Minikube
       run: sudo minikube start --vm-driver=none --bootstrapper=kubeadm
     - name: Run tests
-      run: chmod +x ../scripts/travisTest.sh && ../scripts/travisTest.sh
+      run: chmod +x ../scripts/travisTest.sh && sudo ../scripts/travisTest.sh
     - name: Post tests
       if: always()
       run: |
