Execute everything in same shell

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,10 +24,10 @@ jobs:
       - run: unset _JAVA_OPTIONS
       - name: Run tests
         run: |
-          sudo ../scripts/startMinikube.sh
-          sudo ../scripts/installIstio.sh
-          sudo ../scripts/testApp.sh
-          sudo ../scripts/stopMinikube.sh
+          . ../scripts/startMinikube.sh
+          . ../scripts/installIstio.sh
+          . ../scripts/testApp.sh
+          . ../scripts/stopMinikube.sh
       - name: Post tests
         if: always()
         run: docker images
